# lemma

./: .gitmodules  CMakeLists.txt  README.md
analysis/: Pipfile  common.py  explo_analysis.py  hyopt.py  hyopt_flop.py  hyopt_postflops.py
analysis/converter/: README.md
analysis/notebook/: cfr_profile.ipynb
config/engine/: README.md  builder_r0_IR-100-100-100-100_upoker-p_nlh2_200bb.json  builder_r0_upoker-p_nlh2_200bb.json  builder_r1_upoker-p_nlh2_200bb_bigpot.json  builder_r2_upoker-p_nlh2_200bb_0pot.json  builder_r2_upoker-p_nlh2_200bb_bigpot.json  builder_r2_upoker-p_nlh2_200bb_midpot.json  builder_r3_upoker-p_nlh2_200bb_0pot.json  builder_r3_upoker-p_nlh2_200bb_bigpot.json  builder_r3_upoker-p_nlh2_200bb_midpot.json  cfrs100m_r0_nt72.json  cfrs10m_r0_nt36.json  cfrs15k_r0_nt8.json  cfrs1k_r0_np8.json  cfrs300k_r0_nt8.json  cfrs_r0.json  cfrs_r0_scalar_1000.json  cfrv_r3_upoker-p_0pot.json  cfrv_r3_upoker-p_bigpot.json  cfrv_r3_upoker-p_midpot.json  engine_slumbot_r123.json  engine_slumbot_sgs123_cfr_scalar_15000.json  engine_slumbot_sgs123_cfr_scalar_300000.json  engine_upoker_1bp.json  epsilon0_slumbot_bp-cfrs10m_r1cfrvalt_r2cfrvalt_r3cfrvalt.json  sgs_bp_cfrs100m_IR169-9000-9000-9000_upoker-p_nlh2_200bb.json  sgs_bp_cfrs10m_IR169-9000-9000-9000_upoker-p_nlh2_200bb.json  sgs_bp_cfrs1k_IR100-100-100-100_upoker-p_nlh2_200bb.json  sgs_r0_cfrs15k-IR100-100-100-100_upoker-p_bigpot.json  sgs_r0_cfrs1k-IR100-100-100-100_upoker-p_bigpot.json  sgs_r0_cfrs300k-IR100-100-100-100_upoker-p_bigpot.json  sgs_r0_cfrs300k-IR169-9000-9000-9000_upoker-p_bigpot.json  sgs_r0_scalar_1000_upoker-p_bigpot.json  sgs_r0_scalar_15000_upoker-p_bigpot.json  sgs_r0_scalar_300000_upoker-p_bigpot.json  sgs_r0_upoker-p_bigpot.json
config/engine/delta/: 0.json
config/engine/delta/builder/: builder_r1_upoker-p_nlh2_200bb_bigpot.json  builder_r2_upoker-p_nlh2_200bb_0pot.json  builder_r3_upoker-p_nlh2_200bb_0pot.json  builder_r3_upoker-p_nlh2_200bb_midpot.json
config/engine/delta/cfr/: cfrs_r1_upoker-p_0.json  cfrs_r1_upoker-p_0pot.json  cfrs_r1_upoker-p_1600.json  cfrs_r1_upoker-p_800.json  cfrs_r1_upoker-p_bigpot.json  cfrs_r1_upoker-p_midpot.json  cfrs_r2_upoker-p_0pot.json  cfrs_r2_upoker-p_bigpot.json  cfrs_r2_upoker-p_midpot.json  cfrv_r2_upoker-p_0pot.json  (+5 more)
config/engine/gamma/: 0.json
config/engine/zeta/: 0.json  1.json
config/engine/zeta0/: engine.json
cuckoo_lab/: CMakeLists.txt  main.cpp
idea_run/: build_buckets_colex_priv2_pub3_clusters60_threads1.run.xml  build_buckets_colex_priv2_pub5_clusters169_threads1.run.xml  build_buckets_emd_priv2_pub1_clusters100_threads1.run.xml  build_buckets_emd_priv2_pub3_clusters100_threads1.run.xml  delta_0.run.xml  hand_indexer.run.xml  lemma_slumbot_01_sgs123_cfr_scalar_1000.run.xml  lemma_slumbot_02_sgs123_cfr_scalar_15000.run.xml  lemma_slumbot_03_sgs123_cfr_scalar_300000.run.xml  pluribus_vs_upoker_1bp.run.xml  train_bp_cfrs100m-IR169-9000-9000-9000_upoker-p_bigpot.run.xml  train_bp_cfrs10m-IR169-9000-9000-9000_upoker-p_nlh2_200bb.run.xml  train_bp_cfrs15k-IR100-100-100-100_upoker-p_bigpot.run.xml  train_bp_cfrs1k-IR100-100-100-100_upoker-p_bigpot.run.xml  train_bp_cfrs1k-IR100-100-100-100_upoker-p_nlh2_200bb.run.xml  train_bp_cfrs300k-IR100-100-100-100_upoker-p_bigpot.run.xml  train_bp_cfrs300k-IR169-9000-9000-9000_upoker-p_bigpot.run.xml  waugh_bucket_test.run.xml  zeta0.run.xml  zeta_0.run.xml  zeta_1.run.xml
mock/slumbot/: b400b900b1600b8100_pos1_holecards_JSJh_resp.json  login_success_resp.json  slumbot_api_mock.chls  slumbot_api_mock.surgeconfig
modules/acpc_server/: bm_run_matches.c  bm_server.c  bm_widget.c
modules/agent/: CMakeLists.txt  README.md
modules/agent/src/: acpc_connector.cpp  acpc_connector.hpp  agent.cpp  autodidact_controller.cpp  autodidact_controller.hpp  autodidact_sdk.cpp  autodidact_sdk.h  base_connector.hpp  basic_controller.cpp  basic_controller.hpp  bulldog_controller.cpp  bulldog_controller.hpp  bulldog_sdk.cpp  bulldog_sdk.h  constants.hpp  controller.hpp  dealer.c  engine_eval.cpp  network_utils.cpp  network_utils.hpp  runtime_utils.hpp  server_constants.h  slumbot_connector.copy.cpp  slumbot_connector.cpp  slumbot_connector.hpp  usr_interrupt_handler.hpp  webserver.cpp
modules/agent/test/: test_agent.cpp  test_sdk.cpp  waugh_bucket_test.cpp
modules/core/: CMakeLists.txt
modules/core/src/: card_util.cpp  game.c  game_util.cpp  net.c  rng.c  table_util.cpp
modules/core/test/: test_card_util.cpp  test_core.cpp  test_table_util.cpp
modules/engine/: CMakeLists.txt
modules/engine/src/: abstract_game.cpp  abstract_game.h  action_abs.cpp  action_abs.h  action_chooser.hpp  ag_builder.hpp  bucket.cpp  bucket.h  bucket_pool.hpp  bucket_reader.hpp  build_buckets.cpp  builder.hpp  card_abs.hpp  cfr.cpp  cfr.h  cfr_command.hpp  cfr_param.h  cfr_progress.h  cfr_state.h  cfr_worker.cpp  cfr_worker.h  cfr_worker_scalar.cpp  check_kernel_size.cpp  check_strategy.cpp  emd.cpp  emd.h  engine.cpp  engine_util.cpp  engine_util.h  eval-h2h.cpp  hand_belief.cpp  hand_belief.h  hand_kernel.hpp  kmeans.cpp  kmeans.h  node.cpp  node.h  profiling.h  pstl.hpp  rnba_kernel.hpp  (+9 more)
modules/engine/test/: test_abstraction.cpp  test_cfr.cpp  test_engine.cpp  test_engine_util.cpp  test_hand_kernel.cpp  test_rnba_kernel.cpp  waugh_bucket_test.cpp
(+68 files in other folders)
